# fastapi-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: 260203_project_setup.md
src/: hello.py  main.py
src/app/: main.py
src/features/tasks/: api.py  models.py
src/shared/: __init__.py
src/shared/features/event_sourcing/: __init__.py  enums.py  models.py  repository.py  service.py
src/shared/features/semantic_reducer/: __init__.py  models.py  repository.py  service.py
src/shared/features/semantic_reducer/note_versions/: __init__.py  enums.py  models.py  reducer.py  repository.py
src/shared/features/tasks/: repository.py
src/shared/infra/: __init__.py  database.py  settings.py
src/workers/: celery_app.py  tasks.py
